<resources>
    <string name="app_name">Ryan-san</string>
    <string name="titleQuestion">Will you become the next Ryan-sama?</string>
    <string name="promptQuestion">You wake up from a good rest. What is the first thing that you do?</string>
    <string name="snapchatMessages">Check Snapchat Messages</string>
    <string name="instagramMessages">Check your instagram dms</string>
    <string name="missedCalls">Check your missed calls</string>
    <string name="textMessages">check for any text messages</string>
    <string name="instagramStartingPrompt">It goes down in the DM, right? You decide to open instagram and you see 3 messages pending. One from Yolanda, one from Cadence, and one from Kiko. Which message will you open?</string>
    <string name="openDM">Open Her DM</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
</resources>
